1999-08-15  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* include/glclock.h (class glclock): Add comments.

	* bin/main.cc (clock_app): Set default visual and colormap.
	(main): Add try-catch block to destroy toplevel.

	* lib/glclock.cc (best_visual): New function.

	* include/glclock.h (class glclock): Add new member best_visual.

1999-07-29  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* lib/simple.c (modify_image_info): Renamed from modify_info.
	(read_texture_image): Renamed from read_texture and implemented.
	(load_texture_image): Renamed from load_texture.
	(set_texture): New function.
	(simple_draw_clock): Add texture-mapping support.
	(simple_set_prop): Set new flags.
	(simple_init): Remove unused code.

1999-07-27  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* include/simple.h: Add simple_set_prop decl.

	* lib/simple.c: Use <> for simple.h.
	(read_texture, modify_info, load_texture): New functions.
	(simple_set_prop): New function.

	* bin/main.cc (class clock_app): New class replacing struct
	app_data.
	(class clock_app): Add member accels and destructor.
	(create_window): Pass accels to GtkItemFactory.
	(~clock_app): New function.
	(clock_app): Make a new GtkAccelGroup.

1999-07-26  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* profile.cc (save): Use xmlNewDocNode.

1999-07-23  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* configure.in: Change the version number to 1.3.4.

	* NEWS: Modified.

	* rglclock.1: Modified.

1999-07-16  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* bin/main.cc (create_widget): Set geometry hints.
	(create_widget): Revise last change and set policy.

	* rglclock.1: Modified.

	* main.cc (longopts): Add `--private-colormap' option.
	(display_help): Update the help message.
	(main): Pass opt_private_colormap to gdk_colormap_new.

1999-07-14  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Makefile.am (dist-snapshot distcheck-snapshot): Removed.

	* bin/Makefile.am: New file.

	* lib/Makefile.am: New file.
